# ertimes

./: .gitignore  LICENSE  MEDIAN_INCOME_GUIDE.md  README.md  create_sample_census_data.py  democaligraphs1.py  demodata.py  demomerge.py  demotest.py  ed_volume_dataset.csv  pyproject.toml  run_demo.py  try_stats.py
.github/workflows/: tests.yml
data/: CaliDemoData.xls  Emergency Department Volume and Capacity - Catalog - ED_COMBINE_AL.csv  california_median_income_by_zipcode.csv  emergency-department-volume-and-capacity-2021-2023.xlsx  urban_rural_map_California.html  urban_rural_map_california.html
demo_outputs/: california_emergency_data_sample.csv  urban_rural_map.html
er_volume_tools/: data_loader.py
src/ertimes/: Median_income.py  __init__.py  burden_analysis.py  clean.py  democaligraphs1.py  democlean.py  demodata.py  demographics.py  demomerge.py  demotest.py  fetch_census_data.py  filtered_health_conditions_bar.py  health_conditions_bar.py  io.py  map_viz.py  median_income_demo.py  mental_health.py  stats.py  stats_analysis.py  stats_ranking.py  stats_reports.py  stats_visualization.py
src/scripts/: median_income_demo.py
tests/: test_io.py  test_map.py  test_stats.py
