[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ertimes"
version = "0.1.0"
description = "Edit later"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]