[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ertimes"
version = "0.1.0"
description = "Edit later"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "census>=0.8",
  "matplotlib>=3.0", 
  "seaborn>=0.12",    
  "folium>=0.15",
  "plotly>=5.0",
  "requests>=2.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]